--- a/index.html
+++ b/index.html
@@ -42,6 +42,25 @@
         </div>
       </nav>
     </header>
+
+    <main class="container-fluid" id="main">
+      <div class="left">
+        <h5>Hey, I'm Austen</h5>
+        <h3>I create <span>web designs</span> and experiences</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+          odit dignissimos atque culpa, illo perspiciatis voluptatem cupiditate
+          aliquid consectetur tenetur aut molestiae harum sapiente architecto.
+        </p>
+        <button type="button" class="btn btn-outline-primary">
+          Get In Touch
+        </button>
+      </div>
+      <div class="right">
+        <img src="./assets/man.jpg" alt="Pexels Image for a Headshot" />
+      </div>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
