Adding stylign to main section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
 
     <main class="container-fluid" id="main">
-      <div class="left">
+      <div class="col left">
         <h5>Hey, I'm Austen</h5>
         <h3>I create <span>web designs</span> and experiences</h3>
         <p>
