Setting up the layout for the skills section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,37 @@
       </div>
     </main>
 
+    <section class="container">
+      <section class="row">
+        <h2 class="col col-12 my-4 section-title" id="skills">Skills</h2>
+        <section class="col col-12 col-md-4">
+          <h3 class="column-heading">Webflow Coding</h3>
+          <img class="w-100" src="./assets/coding.jpg" alt="Coding Screen" />
+          <h4 class="column-heading">Sonya Lagerlöf</h4>
+          <p class="column-p">Sonya is an expert of Yoga at 101 degrees.</p>
+          <button class="btn btn-outline-dark">More info</button>
+        </section>
+        <section class="col col-12 col-md-4">
+          <h3 class="column-heading">UI & UX Design</h3>
+          <img
+            class="w-100"
+            src="./assets/web-desgin.jpg"
+            alt="UI and UX Design"
+          />
+          <h4 class="column-heading">Sonya Lagerlöf</h4>
+          <p class="column-p">Sonya is an expert of Yoga at 101 degrees.</p>
+          <button class="btn btn-outline-dark">More info</button>
+        </section>
+        <section class="col col-12 col-md-4">
+          <h3 class="column-heading">Strategy & Direction</h3>
+          <img class="w-100" src="./assets/strat.jpg" alt="Startegy" />
+          <h4 class="column-heading">Sonya Lagerlöf</h4>
+          <p class="column-p">Sonya is an expert of Yoga at 101 degrees.</p>
+          <button class="btn btn-outline-dark">More info</button>
+        </section>
+      </section>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
