--- a/index.html
+++ b/index.html
@@ -182,6 +182,34 @@
 
     <section class="container" id="feedback">
       <h2 class="col col-12 my-4 section-title">Feedback</h2>
+      <div class="box">
+        <form>
+          <div class="mb-3">
+            <label for="form-name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="form-name" />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label"
+              >Email address</label
+            >
+            <input
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              required
+            />
+            <div id="emailHelp" class="form-text">
+              We'll never share your email with anyone else.
+            </div>
+          </div>
+          <div class="mb-3">
+            <label for="form-message" class="form-label">Message</label>
+            <input class="form-control" id="form-message" />
+          </div>
+          <button type="submit" class="btn btn-outline-primary">Submit</button>
+        </form>
+      </div>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
