--- a/index.html
+++ b/index.html
@@ -93,91 +93,93 @@
       <h2 class="col col-12 my-4 section-title">About Me</h2>
     </section>
 
-    <section class="container" id="portfolio">
-      <h2 class="col col-12 my-4 section-title">Portfolio</h2>
-      <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
+    <section class="container-fluid pb-5" id="portfolio">
+      <section class="container">
+        <h2 class="col col-12 my-4 section-title">Portfolio</h2>
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./assets/example-website-1.jpg"
+                class="d-block w-100"
+                alt="Example Website to Make"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="carousel-text">Example of what you could get</h5>
+                <p class="carousel-text">
+                  This is an example of what I could do.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./assets/example-code.jpg"
+                class="d-block w-100"
+                alt="Code Written on the Screen"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="carousel-text">Example code I've written</h5>
+                <p class="carousel-text">
+                  This is an example of some of the code I've written.
+                </p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./assets/example-website-2.jpg"
+                class="d-block w-100"
+                alt="Example Website number 2"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="carousel-text">Third slide label</h5>
+                <p class="carousel-text">
+                  This is another example of the website I could make for you.
+                </p>
+              </div>
+            </div>
+          </div>
           <button
+            class="carousel-control-prev"
             type="button"
             data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
           <button
+            class="carousel-control-next"
             type="button"
             data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleCaptions"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="./assets/example-website-1.jpg"
-              class="d-block w-100"
-              alt="Example Website to Make"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="carousel-text">Example of what you could get</h5>
-              <p class="carousel-text">
-                This is an example of what I could do.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./assets/example-code.jpg"
-              class="d-block w-100"
-              alt="Code Written on the Screen"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="carousel-text">Example code I've written</h5>
-              <p class="carousel-text">
-                This is an example of some of the code I've written.
-              </p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./assets/example-website-2.jpg"
-              class="d-block w-100"
-              alt="Example Website number 2"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="carousel-text">Third slide label</h5>
-              <p class="carousel-text">
-                This is another example of the website I could make for you.
-              </p>
-            </div>
-          </div>
-        </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleCaptions"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+      </section>
     </section>
 
     <section class="container" id="feedback">
@@ -211,6 +213,8 @@
         </form>
       </div>
     </section>
+
+    <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
