--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <section class="container" id="feedback">
       <h2 class="col col-12 my-4 section-title">Feedback</h2>
-      <div class="box">
+      <div class="feedback-box">
         <form>
           <div class="mb-3">
             <label for="form-name" class="form-label">Name</label>
