Adding the details to the about section.

--- a/index.html
+++ b/index.html
@@ -109,14 +109,17 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card">
+            <div class="card text-center">
               <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
+                <h5 class="card-title">Future Work</h5>
                 <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
+                  I'm excited to explore new projects, starting with
+                  enhancements to this site. For example, I plan to implement an
+                  interactive background that responds to cursor movement,
+                  adding a dynamic and engaging visual effect for visitors. I
+                  also want to experiment with new color schemes to keep the
+                  site fresh and modern.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
           </div>
