Adding a little bit of color to the site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header>
       <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Austen Cole</a>
+          <a class="navbar-brand" href="#"
+            >Austen <span class="name-nav">Cole</span></a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -67,8 +69,11 @@
         <section class="col col-12 col-md-4">
           <h3 class="column-heading">Webflow Coding</h3>
           <img class="w-100" src="./assets/coding.jpg" alt="Coding Screen" />
-          <h4 class="column-heading">Sonya Lagerlöf</h4>
-          <p class="column-p">Sonya is an expert of Yoga at 101 degrees.</p>
+          <h4 class="column-heading">Coding Languages</h4>
+          <p class="column-p">
+            I have experience in HTML and CSS. I will be learing Javascript,
+            Node.js, and React to add to the experience.
+          </p>
         </section>
         <section class="col col-12 col-md-4">
           <h3 class="column-heading">UI & UX Design</h3>
@@ -77,14 +82,20 @@
             src="./assets/web-desgin.jpg"
             alt="UI and UX Design"
           />
-          <h4 class="column-heading">Sonya Lagerlöf</h4>
-          <p class="column-p">Sonya is an expert of Yoga at 101 degrees.</p>
+          <h4 class="column-heading">CSS & Bootstrap</h4>
+          <p class="column-p">
+            I can style your HTML site to anything you like with CSS. I can add
+            Bootstrap to add extra styling to your site.
+          </p>
         </section>
         <section class="col col-12 col-md-4">
           <h3 class="column-heading">Strategy & Direction</h3>
           <img class="w-100" src="./assets/strat.jpg" alt="Startegy" />
-          <h4 class="column-heading">Sonya Lagerlöf</h4>
-          <p class="column-p">Sonya is an expert of Yoga at 101 degrees.</p>
+          <h4 class="column-heading">Anything You Can Think Of...</h4>
+          <p class="column-p">
+            Anything you want can be made. Anything you need in a website can be
+            added. You're imagination is the only limit.
+          </p>
         </section>
       </section>
     </section>
@@ -98,7 +109,7 @@
               <div class="card-body">
                 <h5 class="card-title">About My Work</h5>
                 <p class="card-text">
-                  I’m a developer passionate about crafting accessible,
+                  I'm a developer passionate about crafting accessible,
                   pixel-perfect user interfaces that blend thoughtful design
                   with robust engineering. My favorite work lies at the
                   intersection of design and development, creating experiences
@@ -255,7 +266,10 @@
     <footer class="mt-4">
       <div class="bg-light py-4">
         <div class="container text-center">
-          <p class="text-muted mb-0 py-2">© 2025 Created by Austen Cole</p>
+          <p class="text-muted mb-0 py-2">
+            © 2025 Created & Designed by
+            <span class="foot-name">Austen Cole</span>
+          </p>
         </div>
       </div>
     </footer>
