Testing responsive coding. Trouble with the form and main section

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </section>
 
     <section class="container-fluid pb-4" id="feedback">
-      <section class="container">
+      <section class="container feedback-area">
         <h2 class="col col-12 my-4 section-title">Feedback</h2>
         <div class="feedback-box">
           <form>
