--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <h5>Hey, I'm Austen</h5>
         <h3>I create <span>web designs</span> and experiences</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
-          odit dignissimos atque culpa, illo perspiciatis voluptatem cupiditate
-          aliquid consectetur tenetur aut molestiae harum sapiente architecto.
+          I build beautiful, functional Web and App solutions. Passionate about
+          coding and solving problems. Let's connect, feel free to reach out via
+          the form, I'd love to hear from you!
         </p>
         <button type="button" class="btn btn-outline-primary">
           Get In Touch
