Added responsive screen size to the form section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <h3>I create <span>web designs</span> and experiences</h3>
         <p>
           I build beautiful, functional Web and App solutions. Passionate about
-          coding and solving problems. Let's connect, feel free to reach out via
-          the form, I'd love to hear from you!
+          coding and solving problems. <br />
+          Let's connect, feel free to reach out via the form, I'd love to hear
+          from you!
         </p>
         <button type="button" class="btn btn-outline-primary">
           Get In Touch
