Added a small function to the Get in Touch button to jump to the form section

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           Let's connect, feel free to reach out via the form, I'd love to hear
           from you!
         </p>
-        <button type="button" class="btn btn-outline-primary">
-          Get In Touch
-        </button>
+        <a class="btn btn-outline-primary" href="#feedback" role="button"
+          >Get in Touch</a
+        >
       </div>
       <div class="right">
         <img src="./assets/man.jpg" alt="Pexels Image for a Headshot" />
