--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-md bg-body-tertiary">
+      <nav class="navbar fixed-top navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"
             >Austen <span class="name-nav">Cole</span></a
