--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Project-1 Portfolio</title>
   </head>
   <body>
