Added the required class to a couple of the form fields

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <form>
             <div class="mb-3">
               <label for="form-name" class="form-label">Name</label>
-              <input type="text" class="form-control" id="form-name" />
+              <input type="text" class="form-control" id="form-name" required />
             </div>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label"
@@ -254,7 +254,7 @@
             </div>
             <div class="mb-3">
               <label for="form-message" class="form-label">Message</label>
-              <input class="form-control" id="form-message" />
+              <input class="form-control" id="form-message" required />
             </div>
             <button type="submit" class="btn btn-outline-primary">
               Submit
