--- a/index.html
+++ b/index.html
@@ -234,34 +234,41 @@
         <div class="feedback-box">
           <form
             action="https://formspree.io/f/mjkrwyqr"
-            class="fs-form"
-            target="_top"
             method="POST"
+            target="_top"
           >
-            <div class="fs-field">
-              <label class="fs-label" for="name">Your Name</label>
-              <input class="fs-input" id="name" name="name" required />
+            <div class="mb-3">
+              <label for="form-name" class="form-label">Name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="form-name"
+                name="name"
+              />
             </div>
-            <div class="fs-field">
-              <label class="fs-label" for="email">Email</label>
-              <input class="fs-input" id="email" name="email" required />
-              <p class="fs-description">
-                This will help me respond to your query via an email.
-              </p>
-            </div>
-            <div class="fs-field">
-              <label class="fs-label" for="message">Message</label>
-              <textarea
-                class="fs-textarea"
-                id="message"
-                name="message"
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="email"
                 required
-              ></textarea>
-              <p class="fs-description">What would you like to discuss?</p>
+              />
+              <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div>
             </div>
-            <div class="fs-button-group">
-              <button class="fs-button" type="submit">Submit</button>
+            <div class="mb-3">
+              <label for="form-message" class="form-label">Message</label>
+              <input class="form-control" id="form-message" name="message" />
             </div>
+            <button type="submit" class="btn btn-outline-primary">
+              Submit
+            </button>
           </form>
         </div>
       </section>
